--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring Nightreign</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../plugins/bxslider.css">
-    <link rel="stylesheet" href="../plugins/magnific-popup.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="plugins/bxslider.css">
+    <link rel="stylesheet" href="plugins/magnific-popup.css">
 </head>
 <body>
     <header>
@@ -15,11 +15,11 @@
 
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="../pages/historia.html">História</a></li>
-                <li><a href="../pages/personagens.html">Personagens</a></li>
-                <li><a href="../pages/gameplay.html">Gameplay</a></li>
-                <li><a href="../pages/builds.html">Builds</a></li>
-                <li><a href="../pages/galeria.html">Galeria</a></li>
+                <li><a href="pages/historia.html">História</a></li>
+                <li><a href="pages/personagens.html">Personagens</a></li>
+                <li><a href="pages/gameplay.html">Gameplay</a></li>
+                <li><a href="pages/builds.html">Builds</a></li>
+                <li><a href="pages/galeria.html">Galeria</a></li>
             </ul>
         </nav>
         </header>
@@ -74,8 +74,8 @@
     </p>
   </div>
 </main>
-      <script src="../plugins/jquery.min copy.js"></script>
-      <script src="../plugins/magnific-popup.js"></script>
+      <script src="plugins/jquery.min copy.js"></script>
+      <script src="plugins/magnific-popup.js"></script>
       <script>
         $(document).ready(function() {
             $('.open-popup').magnificPopup({
