--- a/index.html
+++ b/index.html
@@ -39,36 +39,36 @@
   
   <section class="destaques">
     <div class="card">
-      <img src="../Elden Ring/imagens/Wormface.png" alt="Personagem épico">
+      <img src="imagens/Wormface.png" alt="Personagem épico">
       <h3>Personagens</h3>
       <p>Conheça os guerreiros amaldiçoados e seus passados sombrios.</p>
-      <a href="../Elden Ring/pages/personagens.html" class="btn">Explorar</a>
+      <a href="pages/personagens.html" class="btn">Explorar</a>
     </div>
 
     <div class="card">
-      <img src="../Elden Ring/imagens/mapa.jpg" alt="Mapa do mundo">
+      <img src="imagens/mapa.jpg" alt="Mapa do mundo">
       <h3>Mundo de Nightreign</h3>
       <p>Desvende as regiões dominadas por trevas e os chefes ancestrais.</p>
       <a href="#mapa-popup" class="open-popup">Ver mapa</a>
     </div>
 
     <div class="card">
-      <img src="../Elden Ring/imagens/banner2.jpg" alt="Galeria de imagens">
+      <img src="imagens/banner2.jpg" alt="Galeria de imagens">
       <h3>Galeria Sombria</h3>
       <p>Imagens incríveis dos locais amaldiçoados e campos de batalha.</p>
-      <a href="../Elden Ring/pages/galeria.html" class="btn">Ver galeria</a>
+      <a href="pages/galeria.html" class="btn">Ver galeria</a>
     </div>
   </section>
 
   
   <section class="chamada">
     <h2>Você está pronto para enfrentar a escuridão?</h2>
-    <a href="../Elden Ring/pages/historia.html" class="btn btn-secondary">Mergulhe na história</a>
+    <a href="pages/historia.html" class="btn btn-secondary">Mergulhe na história</a>
   </section>
    
   <div id="mapa-popup" class="mfp-hide popup-content">
     <h2>Mapa de Nightreign</h2>
-    <img src="../Elden Ring/imagens/mapa.jpg" alt="Mapa do Mundo" style="width: 100%; border-radius: 10px; margin-top: 15px;">
+    <img src="imagens/mapa.jpg" alt="Mapa do Mundo" style="width: 100%; border-radius: 10px; margin-top: 15px;">
     <p style="margin-top: 15px;">
         Explore terras esquecidas, dominadas pela Névoa Negra, Cada região guarda segredos antigos e perigos mortais.
     </p>
