--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Personagens</title>
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <style>
     .container {
       display: flex;
@@ -57,12 +57,12 @@
         <nav>
 
             <ul>
-                <li><a href="../index.html">Início</a></li>
-                <li><a href="../pages/historia.html">História</a></li>
-                <li><a href="../pages/personagens.html">Personagens</a></li>
-                <li><a href="../pages/gameplay.html">Gameplay</a></li>
-                 <li><a href="../pages/builds.html">Builds</a></li>
-                <li><a href="../pages/galeria.html">Galeria</a></li>
+                <li><a href="ndex.html">Início</a></li>
+                <li><a href="pages/historia.html">História</a></li>
+                <li><a href="pages/personagens.html">Personagens</a></li>
+                <li><a href="pages/gameplay.html">Gameplay</a></li>
+                 <li><a href="pages/builds.html">Builds</a></li>
+                <li><a href="pages/galeria.html">Galeria</a></li>
             </ul>
         </nav>
     </header>
@@ -95,62 +95,62 @@
     const personagens = {
       duchess: {
         nome: "Duchess",
-        imagem: "../imagens/duchess.png",
+        imagem: "imagens/duchess.png",
         descricao: "Uma assassina ágil que se move nas sombras, capaz de se tornar invisível e eliminar inimigos com precisão letal."
       },
       recluse: {
         nome: "Recluse",
-        imagem: "../imagens/recluse.png",
+        imagem: "imagens/recluse.png",
         descricao: "Maga elementalista que utiliza sangue arcano para lançar feitiços devastadores, punindo aqueles que habitam as sombras."
       },
       guardian: {
         nome: "Guardian",
-        imagem: "../imagens/GUARDIAN.webp",
+        imagem: "imagens/GUARDIAN.webp",
         descricao: "Um tanque alado que protege aliados com escudo colossal e pode realizar ataques aéreos devastadores."
       },
       ironeye: {
         nome: "Ironeye",
-        imagem: "../imagens/ironeye.webp",
+        imagem: "imagens/ironeye.webp",
         descricao: "Arqueiro veloz e preciso, especialista em ataques à distância e mobilidade, capaz de marcar inimigos para aumentar o dano crítico."
       },
       raider: {
         nome: "Raider",
-        imagem: "../imagens/raider.webp",
+        imagem: "imagens/raider.webp",
         descricao: "Guerreiro destemido que utiliza um enorme martelo para causar danos massivos, equilibrando ataques ofensivos e defensivos."
       },
       wylder: {
         nome: "Wylder",
-        imagem: "../imagens/WYLDER.webp",
+        imagem: "imagens/WYLDER.webp",
         descricao: "Guerreiro equilibrado com espada, escudo e uma garra que facilita movimentação rápida, ideal para iniciantes."
       },
       executor: {
         nome: "Executor",
-        imagem: "../imagens/executor.webp",
+        imagem: "imagens/executor.webp",
         descricao: "O Executor é um guerreiro amaldiçoado que empunha uma katana corrompida, destacando-se em combates corpo a corpo com foco em contra-ataques e deflexões precisas. Sua jogabilidade é inspirada em Sekiro: Shadows Die Twice, exigindo timing e habilidade para maximizar seu potencial."
       },
       nightidol: {
         nome: "Night Idol",
-        imagem: "../imagens/Night idol.png",
+        imagem: "imagens/Night idol.png",
         descricao: "Uma entidade poderosa que comanda espíritos aliados, desafiando os jogadores com suas habilidades mágicas e invocações"
       },
       wormface: {
             nome: "Wormface",
-            imagem: "../imagens/Wormface.png",
+            imagem: "imagens/Wormface.png",
             descricao: "Carruagens infernais que surgem como chefes errantes, causando destruição com suas chamas avassaladoras."
         },
         famingchariots: {
             nome: "Flaming Chariots",
-            imagem: "../imagens/FlamingChariots.png",
+            imagem: "imagens/FlamingChariots.png",
             descricao: "O chefe final, uma entidade sombria que desafia os jogadores com habilidades devastadoras e uma luta épica."
         },
         firemonk: {
             nome: "Fire Monk",
-            imagem: "../imagens/fire_monk.webp",
+            imagem: "imagens/fire_monk.webp",
             descricao: "Um monge que canaliza o poder do fogo, desafiando os jogadores com ataques flamejantes e resistência."
         },
         flyingdragonaghell: {
             nome: "Flying Dragon Agheel",
-            imagem: "../imagens/Flying Dragon Agheel.png",
+            imagem: "imagens/Flying Dragon Agheel.png",
             descricao: "Um dragão alado que sobrevoa os céus de Limveld, pronto para atacar com investidas aéreas e sopros de fogo. "
         }
 
