--- a/pages/builds.html
+++ b/pages/builds.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring Nightreign</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -12,12 +12,12 @@
         <nav>
 
             <ul>
-                <li><a href="../index.html">Início</a></li>
-                <li><a href="../pages/historia.html">História</a></li>
-                <li><a href="../pages/personagens.html">Personagens</a></li>
-                <li><a href="../pages/gameplay.html">Gameplay</a></li>
-                <li><a href="../pages/builds.html">Builds</a></li>
-                <li><a href="../pages/galeria.html">Galeria</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="pages/historia.html">História</a></li>
+                <li><a href="pages/personagens.html">Personagens</a></li>
+                <li><a href="pages/gameplay.html">Gameplay</a></li>
+                <li><a href="pages/builds.html">Builds</a></li>
+                <li><a href="pages/galeria.html">Galeria</a></li>
             </ul>
         </nav>
         </header>
