--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Galeria | Elden Ring Nightreign</title>
-  <link rel="stylesheet" href="plugins/bxslider.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../plugins/bxslider.css">
+  <link rel="stylesheet" href="../css/style.css">
   <style>
     .bx-wrapper img {
       border-radius: 10px;
@@ -32,29 +32,29 @@
         <nav>
 
             <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="pages/historia.html">História</a></li>
-                <li><a href="pages/personagens.html">Personagens</a></li>
-                <li><a href="pages/gameplay.html">Gameplay</a></li>
-                 <li><a href="pages/builds.html">Builds</a></li>
-                <li><a href="pages/galeria.html">Galeria</a></li>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="../pages/historia.html">História</a></li>
+                <li><a href="../pages/personagens.html">Personagens</a></li>
+                <li><a href="../pages/gameplay.html">Gameplay</a></li>
+                 <li><a href="../pages/builds.html">Builds</a></li>
+                <li><a href="../pages/galeria.html">Galeria</a></li>
             </ul>
         </nav>
         </header>
   <main>
     <h2>Galeria de Imagens</h2>
     <ul class="bxslider">
-      <li><img src="imagens/cenario.webp" alt="Cenario"></li>
-      <li><img src="imagens/boss epic.webp" alt="Boss"></li>
-      <li><img src="imagens/banner3.jpg" alt="banner"></li>
-      <li><img src="imagens/banner4.jpg" alt="banner"></li>
-      <li><img src="imagens/banner5.jpg" alt="banner"></li>
-      <li><img src="imagens/banner6.webp" alt=""></li>
+      <li><img src="../imagens/cenario.webp" alt="Cenario"></li>
+      <li><img src="../imagens/boss epic.webp" alt="Boss"></li>
+      <li><img src="../imagens/banner3.jpg" alt="banner"></li>
+      <li><img src="../imagens/banner4.jpg" alt="banner"></li>
+      <li><img src="../imagens/banner5.jpg" alt="banner"></li>
+      <li><img src="../imagens/banner6.webp" alt=""></li>
     </ul>
   </main>
 
-  <script src="plugins/jquery.min copy.js"></script>
-  <script src="plugins/bxslider.min.js"></script>
+  <script src="../plugins/jquery.min copy.js"></script>
+  <script src="../plugins/bxslider.min.js"></script>
   <script>
     $(document).ready(function(){
       $('.bxslider').bxSlider({
