--- a/pages/historia.html
+++ b/pages/historia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elden Ring Nightreign</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -14,12 +14,12 @@
         <nav>
 
             <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="pages/historia.html">História</a></li>
-                <li><a href="pages/personagens.html">Personagens</a></li>
-                <li><a href="pages/gameplay.html">Gameplay</a></li>
-                 <li><a href="pages/builds.html">Builds</a></li>
-                <li><a href="pages/galeria.html">Galeria</a></li>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="../pages/historia.html">História</a></li>
+                <li><a href="../pages/personagens.html">Personagens</a></li>
+                <li><a href="../pages/gameplay.html">Gameplay</a></li>
+                 <li><a href="../pages/builds.html">Builds</a></li>
+                <li><a href="../pages/galeria.html">Galeria</a></li>
             </ul>
         </nav>
     </header>
@@ -64,7 +64,7 @@
                             uma parte da história, da luz e da memória perdida do mundo.</p>
                     </article>
             <figure>
-                <img src="imagens/banner5.jpg" alt="Banner Nightreign">
+                <img src="../imagens/banner5.jpg" alt="Banner Nightreign">
                 <figcaption>O Sombrio Reino de Nightreign</figcaption>
             </figure>
             
